--- a/views/index.html
+++ b/views/index.html
@@ -1,15 +1,29 @@
 {% extends "base.html" %}
 
 {% block maincontent %}
-<div class="jumbotron row-no-margin">
-  <div class="row">
-    <div class="col-md-6">
-    </div>
-    <div class="col-md-6">
-      <h1 class="text-center">WHARRGARBL!</h1>
-      <p class="lead">WHARRGARBL is the future!</p><br>
-      <p class="txt">Something something something, here I go typing away and making some believable text for the website.</p>
-    </div>  
+<div clas="row">
+  <div class="col-md-4 jumbotron text-center">
+    <p>jumbo 1</p>
+  </div>
+  <div class="col-md-4 jumbotron text-center">
+    <p>jumbo 2</p>
+  </div>
+  <div class="col-md-4 jumbotron text-center">
+    <p>jumbo 3</p>
   </div>
 </div>
+<div clas="row">
+  <div class="col-md-4 jumbotron text-center">
+    <p>jumbo 4</p>
+  </div>
+  <div class="col-md-4 jumbotron text-center">
+    <p>jumbo 5</p>
+  </div>
+  <div class="col-md-4 jumbotron text-center">
+    <p>jumbo 6</p>
+  </div>
+</div>
+{% endblock %}
+
+{% block scripts %}
 {% endblock %}
