--- a/views/base.html
+++ b/views/base.html
@@ -15,7 +15,9 @@
       <div class="masthead">
         <div class="row">
           <div class="col-md-9 pull-left">
-            <img src="img/ecobee_icon.svg" class="logo"/>
+            <a href="/">
+              <img src="img/ecobee_icon.svg" class="logo"/>
+            </a>
           </div>
           <div class="col-md-1 text-right">
             <a href="/" class="navitem"><p class="vcenter">Support</p></a>
