--- a/views/realtime.html
+++ b/views/realtime.html
@@ -1,20 +1,182 @@
 {% extends "base.html" %}
 {% block maincontent %}
+<div class="jumbotron" id="loudplot">
+  <div class="row">
+    <div class="col-md-12">
+      <p id="louddisplay"></p>
+      <p id="louddisplaylist"></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <canvas id="smoothie-chart" width="1268" height="507">
+    </div>
+  </div>
+</div>
+
+<div class="jumbotron hidden" id="fftplot">
+  <div class="row">
+    <div class="col-md-12">
+      <p id="fftdisplay"></p>
+      <p id="fftdisplaylist"></p>
+    </div>
+  </div>
+  <div class="row">
+    <!-- <div class="col-md-12 text-center"> -->
+      <div id="fft-chart" style="width:640px; height: 480px;"></div>
+    <!-- </div> -->
+  </div>
+</div>
+<div class="row">
+    <div class="col-md-12 text-center">
+      <button type="button" class="btn btn-success btn-info" id="switchview">View FFT</button>
+    </div>
+</div>
 {% endblock %}
 {% block scripts %}
 <script src="js/socket.io.js"></script>
+<script src="js/smoothie.js"></script>
+<script src="js/canvasjs.min.js"></script>
 <script>
-  var socket = io.connect('http://localhost:8080');
-  socket.on('news', function (data) {
-    console.log(data);
-    socket.emit('my other event', { my: 'data' });
-  });
+//Loudness Plot
+  // Global variables. yuck!
+  var lsamps = [0, 1, 2, 3];
+  var lcur = 0;
+  var fftsamps = [];
+//  var socket = io.connect('http://localhost:8080');
+  var socket = io.connect('http://mshosa-mba:8080');
+  var lseries = new TimeSeries();
+
+  var loudchart = new SmoothieChart();
+  loudchart.addTimeSeries(lseries, { strokeStyle: 'rgba(0, 255, 0, 1)', fillStyle: 'rgba(0, 255, 0, 0.2)', lineWidth: 4 });
+  loudchart.streamTo(document.getElementById("smoothie-chart"), 500);
+
+  // Recieve Loudness data
   socket.on('loudness', function(data){
-    console.log('received a loudness measurement of:', data);
+    if(!data)
+      return;
+
+    // parse/update global values
+    // Ex. data = {value: 24};
+    data = JSON.parse(data);
+    lcur = data.value;
+    lsamps.push(lcur);
+    lseries.append(new Date().getTime(), lcur);
+    // $("#louddisplay").text(lcur);
   });
+
+  var chart = new CanvasJS.Chart("fft-chart", 
+    {
+      title: {text: "FFT Plot"},
+      width: 1310,
+      height: 500,
+      animationEnabled: true,
+      axisX:{title: "Frequency (Hz)", interval: 3},
+      axisY:{title: "Magnitude (dB)"},
+      legend: {},
+      data: [{
+        name: 'fft1',
+        type: 'area',
+        color: 'rgba(0, 255, 0, 1)',
+        markerSize: 0,
+      }]
+    });
+
+  // Recieve FFT Data
   socket.on('fft', function(data){
-    console.log('received a set of fft data');
+    if(!data)
+      return;
+
+    // Ex. data = {length: 1024, samples: [0.0, 1.3, ... , 45.0]};
+    data = JSON.parse(data);
+    var l = data.nsamp;
+    fftsamps = data.samples;
+    
+    // make list of dataPoints
+    var points = fftsamps.reduce(function(prev, cur, i, arr){
+      if (i >= arr.length - 1)
+        return prev;
+      prev.data.push({x: i, y: cur});
+      return prev;
+    }, {data: []});
+
+    // var chart = new CanvasJS.Chart("fft-chart", 
+    // {
+    //   title: {text: "FFT Plot"},
+    //   width: 1310,
+    //   height: 500,
+    //   animationEnabled: true,
+    //   axisX:{title: "Frequency (Hz)", interval: 3},
+    //   axisY:{title: "Magnitude (dB)"},
+    //   legend: {},
+    //   data: [{
+    //     name: 'fft1',
+    //     type: 'area',
+    //     color: 'rgba(0, 255, 0, 1)',
+    //     markerSize: 0,
+    //     dataPoints: points.data
+    //   }]
+    // });
+    chart.options.data[0].dataPoints = points.data;
+    chart.render();
+    //console.log('updated with', points.data);
+    //$(".canvasjs-chart-credit").remove();
   });
-  
+
+  // Button Clicking Shhhhtuff
+  $("#switchview").click(function(){
+    if($("#switchview").text() === "View FFT"){
+      $("#loudplot").addClass("hidden");
+      $("#fftplot").removeClass("hidden");
+      $("#switchview").text("View Loudness");
+    }
+    else{
+      $("#fftplot").addClass("hidden");
+      $("#loudplot").removeClass("hidden");
+      $("#switchview").text("View FFT");
+    }
+  });
+</script>
+<script>
+// FFT Plot
+$(document).ready(function(){
+  var chart = new CanvasJS.Chart("fft-chart", 
+  {
+    title: {text: "FFT Plot"},
+    width: 1310,
+    height: 500,
+    animationEnabled: true,
+    axisX:{title: "Frequency (Hz)", interval: 3},
+    axisY:{title: "Magnitude (dB)"},
+    legend: {},
+    data: [{
+        name: 'fft1',
+        type: 'area',
+        color: 'rgba(0, 255, 0, 1)',
+        markerSize: 0,
+        dataPoints: [
+        {x: 0, y: 0},
+        {x: 1, y: 1},
+        {x: 2, y: 2},
+        {x: 3, y: 3},
+        {x: 4, y: 4},
+        {x: 5, y: 5},
+        {x: 6, y: 6},
+        {x: 7, y: 7},
+        {x: 8, y: 8},
+        {x: 9, y: 9},
+        {x: 10, y: 10},
+        {x: 11, y: 11},
+        {x: 12, y: 12},
+        {x: 13, y: 13},
+        {x: 14, y: 14},
+        {x: 15, y: 15},
+        {x: 16, y: 16},
+        ]
+    }]
+  });
+  chart.render();
+  $(".canvasjs-chart-credit").remove();
+});
 </script>
 {% endblock %}
