--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,8 @@
     </div>
     <div class="row"><!-- Sensors 1x1 -->
       <div class="col-md-12 text-center gridbox">
-        <img src="img/sensors.png" id="realtime"/>
+        <!-- <img src="img/sensors.png" id="realtime"/> -->
+        <img src="img/sensors-dolby.png" id="realtime"/>
       </div>
     </div>
     <div class="row"><!-- About 1x1 -->
