--- a/views/heatmap.html
+++ b/views/heatmap.html
@@ -2,7 +2,7 @@
 
 {% block maincontent %}
 <div class="row">
-  <div class="col-md-12 text-center">
+  <div class="col-md-12 col-md-offset-1 text-center">
     <div id="map-canvas"></div>
   </div>
 </div>
